--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^0.18.0",
-    "request": "^2.53.0"
+    "request": "^2.53.0",
+    "sqlite3": "^3.1.1"
   }
 }
