--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cheerio": "^0.18.0",
     "request": "^2.53.0",
+    "sequelize": "^3.15.1",
     "sqlite3": "^3.1.1"
   }
 }
