--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^0.18.0",
+    "commander": "^2.10.0",
+    "q": "^1.5.0",
     "request": "^2.53.0",
     "sequelize": "^3.15.1",
     "sqlite3": "^3.1.1"
